--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-transition-group": "^4.4.2",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
