--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.25.0",
     "modern-normalize": "^1.1.0",
     "normalize.css": "^8.0.1",
+    "notiflix": "^3.2.4",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
